<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BaseDatos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gftxtci">Cédula * : </string>
    <string name="gftxtnom">Nombre * : </string>
    <string name="gftxtape">Apellido * : </string>
    <string name="gftxtcel">Celular: </string>
    <string name="gfbtnAgregar">Agregar</string>
    <string name="gfbtnConsultar">Consultar</string>
    <string name="gfbtnModificar">Modificar</string>
    <string name="gfbtnBorrar">Borrar</string>
    <string name="gfbtnLimpiar">Limpiar</string>
</resources>
